15-PolicyDrivenGovernanceAndAdmissionControl/04-EnforcingResourceLimitsWithGatekeeper/pod-with-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
      limits:
        cpu: "200m"
        memory: "256Mi"
