15-PolicyDrivenGovernanceAndAdmissionControl/04-EnforcingResourceLimitsWithGatekeeper/require-resources-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: pods-must-have-resources
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
